# perspective_heart_and_brain

./: .gitignore  Project.toml  README.md  config_default.json  environment.yml  heart_brain_simulation.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
codebase/: FHN_analysis.py  FHN_model.py  FHN_plots.py
notebooks/: FHN_spatial_simulations.ipynb  Hodgkin_Huxley.ipynb  action_potential_cardiomyocyte.ipynb  action_potential_fitzhugh_nagumo.ipynb  action_potential_neuron.ipynb  brain_plots.ipynb  data_ecg.ipynb  disorder_exp_correlation.ipynb  ecg_data.ipynb  eeg_data.ipynb  eeg_malfunction.ipynb  fibrosis.ipynb  heart_brain_simulation.ipynb  heart_periodic_stimulus.ipynb  heart_plots.ipynb  hopf_biifurcation.ipynb  scar.ipynb  single_cell_dynamics.ipynb  spike_raster_cardiomyocite.ipynb  spike_raster_neuron.ipynb  spike_raster_plots.ipynb  stochastic_heart.ipynb  stochastic_heart_diffrax.ipynb
notebooks/.ipynb_checkpoints/: fibrosis-checkpoint.ipynb
notebooks/codebase/: FHN_analysis.py  FHN_coherence.py  FHN_entropy.py  FHN_kuramoto.py  FHN_model.py
notebooks_figures_paper/: Aliev_Panfilov_2D_diffusion.ipynb  FHN_2D_diffusion_toyheart.ipynb  FHN_data_generation.ipynb  FHN_erdos-renyi_toybrain.ipynb  FHN_toybrain.ipynb  Kuramoto_order_parameter.ipynb  action_potential_cardiomyocyte.ipynb  action_potential_fitzhugh_nagumo.ipynb  action_potential_neuron.ipynb  data_ecg.ipynb  data_ecg_python.ipynb  data_eeg.ipynb
script/FitzHugh_actpot_phasespace/: Project.toml  funcs.jl  phasespaceplot.jl
script/Ten_Tusscher_model/: setup.py
src/: read_physionet.jl
(+9 files in other folders)
